----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-06-26 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/hungarian: updates, thanks to Peter Bakondy

2004-06-25 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
    * main.php: js error when switching theme, thanks to Michael Keck

2004-06-25 Michal Čihař  <michal@cihar.com>
    * main.php, libraries/select_lang.lib.php: Remember selected charset in
      cookie.
    * libraries/display_export.lib.php: Add back key checking disabling.
    * libraries/export/sql.php: Brand new CREATE query rewriter from LinuxTag,
      fixes bug #979635.
    * read_dump.php: Lets handle better comments, current detection still
      doesn't work with comments inside checked SQL commands, but I thing
      checking these would be overhead (bug #978114).

2004-06-25 Alexander M. Turek  <rabus@users.sourceforge.net>
    * queryframe.php: Undefined index errors.
    * footer.inc.php: bug #979610.
    * server_privileges.php: bug #979596 (granting privileges doesn't take
      wildcards in account).
    * lang/catalan-*.inc.php: Updates, thanks to Xavier Navarro (xavin).
    * lang/german-*.inc.php: Updates.

2004-06-24 Marc Delisle  <lem9@users.sourceforge.net>
    * left.php, config.inc.php, Documentation.html,
      libraries/config_import.lib.php + common.lib.php, all colors.inc.php:
      $cfg['LeftPointerEnable']
    * db_details_structure.php, server_variables.php, 
      tbl_properties_structure.php, config.inc.php, Documentation.html,
      libraries/config_import.lib.php + common.lib.php + display_tbl.lib.php,
      all colors.inc.php:
      $cfg['BrowsePointerEnable']
    * db_details_structure.php, tbl_properties_structure.php, config.inc.php,
      Documentation.html, all colors.inc.php,
      libraries/config_import.lib.php + common.lib.php + display_tbl.lib.php:
      $cfg['BrowseMarkerEnable']